--- a/public/adminLogin.html
+++ b/public/adminLogin.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Admin Login</title>
     <link rel="stylesheet" href="loginPage.css">
 </head>
 <body>
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="#">HOTLIST</a>
+            </nav>
+
+        </header>
+
     <div class="loginBox">
         <!-- <img src="https://cdn.iconscout.com/icon/free/png-256/avatar-380-456332.png" alt="avatar" srcset="" width="250" height="250"> -->
         <h4>Sign in here</h4>
