--- a/public/admin.html
+++ b/public/admin.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#index.html">HOTLIST</a>
+            <a class="navbar-brand" href="http://localhost:3004">HOTLIST</a>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <!-- <li class="nav-item">
@@ -29,7 +29,7 @@
                         <a class="nav-link" href="#">Add Admin</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Log Out</a>
+                        <a class="nav-link" href="http://localhost:3004">Log Out</a>
                     </li>
                 </ul>
             </div>
@@ -37,11 +37,27 @@
 
     </header>
 
-
-
-    <table>
-        <tr>
-            <td>
+    <section>
+        <div class="row">
+            <div class="col-8" id="hdata" style="overflow-x:auto;">
+                    <table class="list" id="hotelList">
+                        <thead>
+                            <tr>
+                                <th>Hotel name</th>
+                                <th>City</th>
+                                <th>State</th>
+                                <th>Address</th>
+                                <th>Picture url</th>
+                                <th>Facility</th>
+                                <th>Phone number</th>
+                                <th>Email</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                         <tbody id="hotelData"></tbody>
+                    </table>
+            </div>
+            <div class="col-4" id="nForm">
                 <h4>Add new hotel</h4>
                 <form id="postForm">
                     <div>
@@ -69,10 +85,6 @@
                         <input type="text" name="facility" id="facility">
                     </div>
                     <div>
-                        <label>Rooms</label>
-                        <input type="text" name="rooms" id="rooms">
-                    </div>
-                    <div>
                         <label>Phone Number</label>
                         <input type="text" name="phoneNumber" id="phone" required>
                     </div>
@@ -80,57 +92,13 @@
                         <label>Email</label>
                         <input type="email" name="email" id="email" required>
                     </div>
-                    <div>
-                        <label>Description</label>
-                        <input type="textarea" name="description" id="describe" required>
-                    </div>
                     <div class="form-action-buttons">
                         <input type="submit" name="Submit">
                     </div>
                 </form>
-            </td>
-            <td>
-                <table class="list" id="hotelList">
-                    <thead>
-                        <tr>
-                            <th>Hotel name</th>
-                            <th>City</th>
-                            <th>State</th>
-                            <th>Address</th>
-                            <th>Picture url</th>
-                            <th>Facility</th>
-                            <th>Rooms</th>
-                            <th>Phone number</th>
-                            <th>Email</th>
-                            <th>Description</th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody></tbody>
-                </table>
-            </td>
-        </tr>
-    </table>
-    <table class="list" id="hotelList">
-        <thead>
-            <tr>
-                <th>Hotel name</th>
-                <th>City</th>
-                <th>State</th>
-                <th>Address</th>
-                <th>Picture url</th>
-                <th>Facility</th>
-                <th>Rooms</th>
-                <th>Phone number</th>
-                <th>Email</th>
-                <th>Description</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
-
-
+            </div>
+        </div>
+    </section>
 
     <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
         <div class="container text-center">
