--- a/public/admin.html
+++ b/public/admin.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hotlist | Admin</title>
-    <link rel="stylesheet" href="styleAdmin.css">
+    <link rel="stylesheet" href="styleadmin.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -40,22 +40,22 @@
     <section>
         <div class="row">
             <div class="col-8" id="hdata" style="overflow-x:auto;">
-                    <table class="list" id="hotelList">
-                        <thead>
-                            <tr>
-                                <th>Hotel name</th>
-                                <th>City</th>
-                                <th>State</th>
-                                <th>Address</th>
-                                <th>Picture url</th>
-                                <th>Facility</th>
-                                <th>Phone number</th>
-                                <th>Email</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                         <tbody id="hotelData"></tbody>
-                    </table>
+                <table class="list" id="hotelList">
+                    <thead>
+                        <tr>
+                            <th>Hotel name</th>
+                            <th>City</th>
+                            <th>State</th>
+                            <th>Address</th>
+                            <th>Picture url</th>
+                            <th>Facility</th>
+                            <th>Phone number</th>
+                            <th>Email</th>
+                             <th></th>
+                        </tr>
+                    </thead>
+                    <tbody id="hotelData"></tbody>
+                </table>
             </div>
             <div class="col-4" id="nForm">
                 <h4>Add new hotel</h4>
